# snack_tracker_project

./: db.sqlite3  pyproject.toml
snack_tracker_project/: settings.py  urls.py
snack_tracker_project/snack_tracker_project/: settings.py
snacks/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py  0002_auto_20211208_0037.py
templates/: _base.html  base.html  snack_detail.html  snack_details.html  snack_list.html  snacks_list.html
